--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
         <scope>import</scope>
       </dependency>
     </dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-dependencies</artifactId>
+      <version>Hoxton.SR8</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
   </dependencyManagement>
 
   <dependencies>
